2006-07-13  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/rbosa.c, src/lib/rbosa.rb:
	- Do not overwrite new class constants if they already exist ;
	- When a class in the sdef inherits from a class that is not 
	  defined, raises a warning and falls back on OSA::Element.
	- When guessing the class type of an object specifier, make sure
	  we don't check more than 4 characters.

	* sample/iChat_uptime.rb:
	New sample.

2006-07-12  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/lib/rbosa.rb:
	- Prefix generated constant names with a 'C' in case the name starts
	  with an digit, to avoid an exception ;
	- Added write-support for properties ;
	- Fixed AE -> Ruby boolean type conversion ;
	- When passing parameters, check if OSA::Element objects are given 
	  and use them instead of creating new ones.

	* sample/iTunes_control.rb:
	Use the mute property.

	* TODO:
	- Updated to mention events timeout ;
	- Closed the 'write-support' point.

2006-07-11  Laurent Sansonetti  <lsansonetti@apple.com>

	* extconf.rb, src/rbosa.h:
	Generate modified Ruby headers at build time to avoid symbol
	collisions (ID, T_DATA).

2006-07-10  Laurent Sansonetti  <lsansonetti@apple.com>

	* sample/iTunes_control.rb:
	Reverted last change since it does not seem to work... print a message
	in the meantime we don't support write operations.

	* src/lib/rbosa.rb:
	Do not print warning messages unless $VERBOSE is set.

	* src/lib/rbosa.rb, src/rbosa.c, src/rbosa.h, src/rbosa_conv.c:
	Added x86 support (fixed FourCharCode swapping issues).

2006-07-05  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/lib/rbosa.rb, src/rbosa.c, src/rbosa_sdef.c, src/rbosa.h,
	  sample/sdef.rb, sample/iTunes_control.rb, sample/iTunes_inspect.rb:
	API change: OSA.app() is splited in 4 sub-methods: OSA.app_with_name(),
	OSA.app_with_path(), OSA.app_with_bundle_id() and OSA.app_with_signature.

	* src/lib/rbosa.rb:
	Convert null elements to nil (fix by Vincent Isambart).

	* sample/iTunes_control.rb: