@@ -38,6 +38,7 @@ VALUE rbosa_scripting_info (VALUE self, VALUE criterion, VALUE value);
 /* rbosa_conv.c */
 FourCharCode rbobj_to_fourchar (VALUE obj);
 VALUE rbosa_four_char_code (VALUE self, VALUE val);
+void rbobj_to_alias_handle (VALUE obj, AliasHandle *alias);
 
 /* helper macros */
 #define RVAL2CSTR(x)        (StringValueCStr (x))
